@@ -1,3 +1,3 @@
-EBUILD fvwm-crystal-9999.ebuild 1905 SHA256 5869016d26367f02f66c7e5d462e5ea8ba6a4aa36b1098a3f4fbf956e62951c0 SHA512 6c3cea90d8d8f5d714bab455288aae1fb664baaa8632cdc55d169e55041cff969728aa8b911b9160258eb3ee895938963e8e4a738b78c52d89cfdaa2d2b5c107 WHIRLPOOL ca76ef314994f98573a8f9282e824b3def78ce4db41caca57180ad5dde9f5f8b60b83a5e2d44c63567b4dffb9cf9ee6d14d49465d68de7f62f2d35d92eedb47d
-MISC ChangeLog 3524 SHA256 2679985ad2b9e296fedd33f8c7eee8415e225c345c2efe7b8b5adc128b7133bb SHA512 9e9ccf9756609fd4146ab173cb0a1e1e7812c9b14df61246b11d40ab3fa948eb20ad7f61745e860317850d0c845dcadb72d09277fa6e9edb6c8a3fd7a6faf6ce WHIRLPOOL 4c55c3d9e7bf69c187801dd692b8cd6d46b67d4c6bfdaff6b494d0ccb3e16a37dc669adc66ef34cf7f4df7622520ddf606fdf6d25db00d86d7dd4605245b81a0
+EBUILD fvwm-crystal-9999.ebuild 1885 SHA256 52dcb7c3271c3b9e3faf8f7d195a27e516256b4a1e846d5229582404f94fc570 SHA512 5e6d7f135af368af2c2ce0530adf983ba1657014ac4440f3b559618022b51dfd8cae356ed65434d3101a59281625b6d02d2b52bda6a0a80118153ab0197bcada WHIRLPOOL 08b9dee996921ac92109f52ce4339be51da4be9750fdb40e1961c9e914d067b65cd5c9f4618c66e4ffa649c810e9af2b7177bc864efdb62f77d65c50572c816d
+MISC ChangeLog 3693 SHA256 a28b7651a55b6865630dbcf4d0b2aace4ccb36e36a8380b5b586959ca5f1df73 SHA512 c97458317cd7d8c521a481ea0d5bff76a1e471ccf081b3cefa35a6f434b41d9b401beb9d896382ed76ab1f043bf8ce8e538ab2e03b12e9567d4cadd945164bd2 WHIRLPOOL 156f76812877ca9d3390e6489f0cf19f0d8d832a945d13b31cedfa7a6f4e368380d020ba6bffa656a2b2b696630e20d97d9243b84db5df8897a70cdea4d040a3
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
