@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/fvwm-crystal
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  29 Jan 2014; Dominique Michel <dominique_libre@users.sourceforge.net> fvwm-crystal-9999.ebuild:
+  removed non nedded depends, added depend on x11-misc/xdg-user-dirs.
 
   21 Jun 2013; Dominique Michel <dominique_libre@users.sourceforge.net> fvwm-crystal-9999.ebuild:
   removed the build patch
